nginx: correctly mangle Location URL for RWS.
Closes #228.

--- a/examples/nginx.conf.sample
+++ b/examples/nginx.conf.sample
@@ -123,6 +123,8 @@ http {
         location ^~ /rws/ {
             proxy_pass http://rws/;
             include proxy_params;
+            proxy_redirect http://$host/ /rws/;
+            proxy_redirect https://$host/ /rws/;
             # Buffering blocks the streaming HTTP requests used for
             # live-update.
             proxy_buffering off;
