--- a/config/cms.conf.sample
+++ b/config/cms.conf.sample
@@ -34,7 +34,8 @@
 
     "other_services":
     {
-        "TestFileCacher":    [["localhost", 27501]]
+        "TestFileCacher":    [["localhost", 27501]],
+        "GerImport":         [["localhost", 25217]]
         },
 
 
@@ -169,18 +170,18 @@
 
 
     "_section": "TaskOverviewWebServer",
-    
+
     "_help": "Listening port and address for TaskOverviewWebServer.",
     "listen_address": "127.0.0.1",
     "listen_port": 8891,
-    
+
     "_help": "Directory to search for tasks (you have to fill this yourself!).",
     "task_repository": "",
-    
+
     "_help": "Whether to automatically sync the task repository (only use this",
     "_help": "for git repositories).",
     "auto_sync": false,
-    
+
     "_help": "Maximum number of simultaneous compilations (the processes will",
     "_help": "be created regardless but will stay idle).",
     "max_compilations": 5,
