add python-telegram-bot requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ pyyaml>=3.11,<3.12  # http://pyyaml.org/wiki/PyYAML
 # Only for printing:
 pycups>=1.9,<1.10  # https://pypi.python.org/pypi/pycups
 PyPDF2>=1.25,<1.26  # https://github.com/mstamy2/PyPDF2/blob/master/CHANGELOG
+
+# Only for telegram-bot
+python-telegram-bot>=9.0.0 # https://github.com/python-telegram-bot/python-telegram-bot
